welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.code
override def run():{growFlowers();gauche();avance();avance();droite();avance();avance();fleur(Color.ORANGE)}

def fleur(c:Color){setCouleurBrosse(c);baisseBrosse();avance();avance();recule();gauche();avance();recule();recule();avance();setCouleurBrosse(Color.YELLOW);droite();leveBrosse();recule()}

def growFlowers(){fleur(Color.RED);avance();avance();avance();avance();fleur(Color.CYAN);recule();recule();recule();recule();droite();avance();avance();avance();avance();gauche();fleur(Color.PINK);avance();avance();avance();avance();fleur(Color.GREEN);recule();recule();recule();recule()}